# korean_stops_2

./: .gitignore  README.md  pyproject.toml
analysis/data/: korean_stops_perception_3_poa_all_ages-subject_information.csv  korean_stops_perception_3_poa_all_ages-subject_information_old (before updating YOB and survey).csv  korean_stops_perception_3_poa_all_ages-subject_information_updated.csv  korean_stops_perception_3_poa_all_ages-time_in_minutes.csv  korean_stops_perception_3_poa_all_ages-trials.csv  mean_f0.praat  mean_f0_results.csv  target_words_frequency.csv  vot_f0_results.txt  vot_f0_results_f0_corrected.txt  vot_f0_results_old (before f0 correction).txt
analysis/perception/final_viz/: collective_analysis.ipynb  individual_analysis.ipynb
analysis/perception/shared/: collective_analysis.R  data_preprocessing.R  individual_lda_modeling.ipynb  individual_mclogit_modeling.R
analysis/production/: participant_703_analysis.R  production_individual_analysis.R  production_individual_analysis.ipynb
analysis/production/final_viz/: collective_analysis.R  collective_analysis.ipynb  individual_analysis.ipynb
analysis/production/shared/: data_preprocessing.ipynb  individual_lda_modeling.ipynb  regression.R
data/: korean_stops_perception_3_poa_all_ages-subject_information.csv  korean_stops_perception_3_poa_all_ages-workerids.csv  korean_stops_production_3_poa_all_ages-workerids.csv  vot_f0_results.txt
experiments/: README.md
experiments/perception/: completion.html  experiment.html
experiments/production/: completion.html  experiment.html  index.js
(+12 files in other folders)
